# ai-seal-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  uv.toml
prompts/: browsing.md
skills/find-meeting-time/: SETUP.md  SKILL.md  auth.py  book_browser_helpers.py  create_event.py  events_around.py  freebusy.py  get_event.py  links.yaml  move_event.py  record_outcome.py  record_person_name.py  record_seniority.py  record_slack_ref.py  render_slot.py  scan_recent_attendees.py  score_weights.yaml  seniority.py  seniority_glean.py  slack_refs.py  slack_refs_glean.py  timezone_map.py
skills/get-google-ai-help/: SKILL.md
skills/voice-analyze/: APPROACH.md  METRICS.md  README.md  SETUP.md  SKILL.md  analyzer.py  extractor.py  (+10 more)
tests/: conftest.py  test_book_browser_helpers.py  test_create_event.py  test_events_around.py  test_freebusy_classifier.py  test_get_event.py  test_install_skills.py  test_move_event.py  test_record_outcome.py  test_record_person_name.py  test_record_seniority.py  test_record_slack_ref.py  test_render_slot.py  test_scan_recent_attendees.py  test_seniority.py  test_seniority_glean.py  test_sheets_writer.py  test_slack_refs.py  test_slack_refs_glean.py  test_timezone_map.py  test_voice_auto_categorize.py  test_voice_extractor.py  test_voice_fetcher.py  test_voice_indexer.py  test_voice_llm.py  test_voice_profile_edit.py  test_voice_proposal.py  test_voice_reviewer.py  test_voice_schema.py  test_voice_scrub.py  test_voice_substituter.py
utils/: build_common_english.py  install_skills.py  npx-mcp-shim  playwright-sign-in  sheets_writer.py
(+24 files in other folders)
