[project]
name = "ai-seal-tools"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "spacy>=3.7",
    "openpyxl>=3.1",
    "wordfreq>=3.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "pytest>=8.0",
    # freebusy.py uses PEP-723 inline deps at runtime; we mirror them in
    # dev deps so the test suite can import the module directly.
    "google-api-python-client>=2.196",
    "google-auth-oauthlib>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["utils", "skills/find-meeting-time", "skills/voice-analyze", "skills/voice-review"]
